dav/webdb_super_work_dont_have_monitoring02_ok/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-db-argocd-kustomize-kyverno-grafana-loki-tempo
  namespace: davtrowebdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website-db-argocd-kustomize-kyverno-grafana-loki-tempo
  template:
    metadata:
      labels:
        app: website-db-argocd-kustomize-kyverno-grafana-loki-tempo
    spec:
      containers:
      - name: app
        image: ghcr.io/exea-centrum/website-db-argocd-kustomize-kyverno-grafana-loki-tempo:latest
        ports:
        - containerPort: 8000
