dav/webdb_super_work_dont_have_monitoring02_ok/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-db-argocd-kustomize-kyverno-grafana-loki-tempo-ingress
  namespace: davtrowebdb
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: fastapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-db-argocd-kustomize-kyverno-grafana-loki-tempo
                port:
                  number: 80
